--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(C3TEMPLATE)
+project(MGKTL)
 
 include(cmake/Logging.cmake)
 include(cmake/Ccache.cmake)
